treesitter-ros2/corpus/msg.txt
========
ROS msg
========

# Examples of basic msg fields
int32 my_int
string my_string
builtin_interfaces/msg/Time time

# Examples of arrays and bounded types
int32[] unbounded_integer_array
int32[5] five_integers_array
int32[<=5] up_to_five_integers_array

# Bounded types
string<=10 bounded_string
string[<=5] up_to_five_unbounded_strings
string<=10[] unbounded_array_of_strings_up_to_ten_characters_each
string<=10[<=5] up_to_five_strings_up_to_ten_characters_each

# Default Values
uint8 x 42
int16 y -2000
string full_name "John Doe"
int32[] samples [-200, -100, 0, 100, 200]

# Examples of constants
int32 X=123
int32 Y=-123
string FOO="foo"
string EXAMPLE='bar'
string[] EXAMPLE=["bar"]

---
(source_file
  (comment
    (comment_char)
    (comment_string)
  )
  (field
    (field_type
      (built_in_type)
    )
    (field_name
      (name_string)
    )
  )
  (field
    (field_type
      (built_in_type)
    )
    (field_name
      (name_string)
    )
  )
  (field
    (field_type
      (custom_interface_type)
    )
    (field_name
      (name_string)
    )
  )
  (comment
    (comment_char)
    (comment_string)
  )
  (field
    (field_type
      (array_type
        (built_in_type)
      )
    )
    (field_name
      (name_string)
    )
  )
  (field
    (field_type
      (array_type
        (built_in_type)
        (number)
      )
    )
    (field_name
      (name_string)
    )
  )
  (field
    (field_type
      (array_type
        (built_in_type)
        (number)
      )
    )
    (field_name
      (name_string)
    )
  )
  (comment
    (comment_char)
    (comment_string)
  )
  (field
    (field_type
      (bounded_string
        (built_in_type)
        (number)
      )
    )
    (field_name
      (name_string)
    )
  )
  (field
    (field_type
      (array_type
        (built_in_type)
        (number)
      )
    )
    (field_name
      (name_string)
    )
  )
  (field
    (field_type
      (array_type
        (built_in_type)
        (number)
      )
    )
    (field_name
      (name_string)
    )
  )
  (field
    (field_type
      (array_type
        (built_in_type)
        (number)
        (number)
      )
    )
    (field_name
      (name_string)
    )
  )
  (comment
    (comment_char)
    (comment_string)
  )
  (field
    (field_type
      (built_in_type)
    )
    (field_name
      (name_string)
    )
    (field_value
      (integer_value)
    )
  )
  (field
    (field_type
      (built_in_type)
    )
    (field_name
      (name_string)
    )
    (field_value
      (integer_value)
    )
  )
  (field
    (field_type
      (built_in_type)
    )
    (field_name
      (name_string)
    )
    (field_value
      (string_value)
    )
  )
  (field
    (field_type
      (array_type
        (built_in_type)
      )
    )
    (field_name
      (name_string)
    )
    (field_value
      (array
        (integer_value)
        (integer_value)
        (integer_value)
        (integer_value)
        (integer_value)
      )
    )
  )
  (comment
    (comment_char)
    (comment_string)
  )
  (field
    (field_type
      (built_in_type)
    )
    (field_name
      (const_field
        (const_name)
        (field_value
          (integer_value)
        )
      )
    )
  )
  (field
    (field_type
      (built_in_type)
    )
    (field_name
      (const_field
        (const_name)
        (field_value
          (integer_value)
        )
      )
    )
  )
  (field
    (field_type
      (built_in_type)
    )
    (field_name
      (const_field
        (const_name)
        (field_value
          (string_value)
        )
      )
    )
  )
  (field
    (field_type
      (built_in_type)
    )
    (field_name
      (const_field
        (const_name)
        (field_value
          (string_value)
        )
      )
    )
  )
  (field
    (field_type
      (array_type
        (built_in_type)
      )
    )
    (field_name
      (const_field
        (const_name)
        (field_value
          (array
            (string_value)
          )
        )
      )
    )
  )
)
